--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,7 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+* {
+  color: white;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 20px;
 }
 
 .App-header {
@@ -19,20 +10,57 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Main-input {
+  background-color: #677c80;
+  width: 50vw;
+  height: 5vh;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: solid 2px aqua;
+  margin-top: 15vh;
+  transition: 0.5s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.Main-input:hover {
+  background-color: #677c80;
+  width: 55vw;
+  height: 5vh;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: solid 2px aqua;
+  margin-top: 15vh;
+  transition: 0.5s;
+}
+
+button {
+  background-color: rgb(47, 105, 105);
+  border: none;
+  border-radius: 10px;
+  height: 6vh;
+  margin-left: 4vw;
+  transition: 0.4s;
+}
+
+button:hover {
+  background-color: rgb(102, 212, 212);
+  border: none;
+  border-radius: 10px;
+  height: 6vh;
+  margin-left: 4vw;
+  transition: 0.4s;
+}
+
+.todo-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 20px;
 }
