--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&family=Space+Grotesk:wght@500&display=swap');
+
 * {
   color: white;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -65,3 +67,25 @@
   gap: 20px;
 }
 
+Form {
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+Button {
+  height: 6vh;
+  margin-top: 15vh;
+}
+
+.Restore {
+  background-color: rgb(134, 2, 2);
+  border: none;
+  border-radius: 10px;
+  margin-left: 2vw;
+}
+
+p {
+  font-family: 'Space Grotesk', sans-serif;
+}
