--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&family=Space+Grotesk:wght@500&display=swap');
 
 * {
-  color: white;
+  margin: 0;
+  color: #916f75;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 20px;
+}
+input:focus,textarea:focus{
+  outline: none;
 }
 
 .App-header {
@@ -29,8 +33,9 @@
 }
 
 .Main-input {
-  background-color: #677c80;
+  background-color: #aaadb1;
   width: 50vw;
+  color: white;
   height: 5vh;
   border-top: none;
   border-left: none;
@@ -42,7 +47,7 @@
 
 
 .Main-input:hover {
-  background-color: #677c80;
+  background-color: #aaadb1;
   width: 55vw;
   height: 5vh;
   border-top: none;
@@ -58,7 +63,9 @@
   width: 7vw;
   border: none;
   height: 6vh;
+  color: white;
   margin-left: 4vw;
+  font-size: 35px;
   transition: 0.4s;
 }
 
@@ -66,6 +73,7 @@
   background-color: #f31c43;
   border: none;
   height: 6vh;
+  color: white;
   margin-left: 4vw;
   transition: 0.4s;
 }
@@ -76,6 +84,10 @@
   justify-content: center;
   flex-direction: row;
   gap: 20px;
+  width: 40vw;
+  background-color: white;
+  margin-top: 1vh;
+  margin-bottom: 10px;
 }
 
 Form {
@@ -99,5 +111,12 @@ Button {
 
 p {
   font-family: 'Space Grotesk', sans-serif;
+  align-self: left;
 }
+
+.MuiButton-outlined {
+  color: red;
+}
+
+
 
